# Herramientas_Computacionales

./: README.md  Spotifyfinal.ipynb  main.py  profiling.ipynb  prueba.ipynb  pruva.csv  pyproject.toml
