[project]
name = "herramientas-computacionales"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.10",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "ydata-profiling>=4.17.0",
]
